get data from database

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -38,7 +38,7 @@
         android:backgroundTint="@color/white"
         android:foregroundTint="#FFFFFF"
         android:clickable="true"
-        app:srcCompat="@drawable/baseline_cloud_done_24"/>
+        app:srcCompat="@drawable/check_24"/>
 
     <EditText
         android:id="@+id/editTaskName"
