--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:padding="16dp"/>
+        android:padding="16dp"
+        android:id="@+id/tasksRecyclerView"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
