--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -36,6 +36,13 @@
                 android:layout_marginEnd="30dp"
                 android:src="@drawable/edit_24"/>
 
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:id="@+id/deleteButton"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/close_24"/>
+
         </RelativeLayout>
         
         <TextView
