--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,13 @@
         android:textColor="@color/pink"
         android:textSize="24sp"/>
 
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tasksRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:padding="16dp"
-        android:id="@+id/tasksRecyclerView"/>
-
+        android:padding="16dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
@@ -35,14 +35,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="336dp"
-        android:layout_marginTop="643dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="319dp"
+        android:layout_marginTop="752dp"
+        android:layout_marginEnd="36dp"
+        android:backgroundTint="@color/pink"
         android:clickable="true"
-        app:srcCompat="@drawable/add_24"
         android:tint="@color/white"
-        android:backgroundTint="@color/pink"/>
+        app:srcCompat="@drawable/add_24" />
 
 </RelativeLayout>
